# fictional-character-vectors

./: .gitignore  .gitleaksignore  .gitmodules  README.org  analysis.org  blogpost.org  pyproject.toml
blogpost/: MonitorAxis.org  README.md  appendix.org  compile.py  follow_up_post.org  main.org  post.org  post1-banality-of-misalignment.org  post1-register-detector.org  post2-persona-space-geometry.org  split_blogpost.py
character-training-followup/: README.md
data/: canonical_fictional_characters.json  degenerate_questions.jsonl
results/: adversarial_clamping_comparison.json  adversarial_clamping_judge.json  adversarial_judge_batch_mapping.json  adversarial_layer32_projections.json  adversarial_layer50_projections.json  adversarial_refined_judged.batch_meta.json  adversarial_refusal_rates.json  adversarial_refusal_rates_full_judged.json  adversarial_refusal_rates_judged.json  adversarial_token_projections.json  benign_coding_aa_projections.json  benign_coding_clamped.json  blogpost_precomputed.json  clamped_evil_judgments.json  clamping_across_layers.json  coding_tasks_aa_projections.json  direction_stability_sweep.json  evil_judgments.json  feature_regression.json  feature_regression_aa.json  feature_regression_lu.json  feature_regression_within.json  forseti_clamping_comparison.json  humaneval_aa_clamped.jsonl  humaneval_aa_clamped_clean.jsonl  humaneval_aa_clamped_clean_eval_results.json  humaneval_aa_clamped_clean_eval_results.json.bak  humaneval_baseline.jsonl  humaneval_baseline_clean.jsonl  humaneval_baseline_clean_eval_results.json  judge_prompt.txt  (+53 more)
(+1668 files in other folders)
