[project]
name = "fictional-character-vectors"
version = "0.1.0"
description = "PCA analysis of fictional character activations in Qwen 2.5 32B"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "numpy",
    "scikit-learn",
    "scipy",
    "pandas",
    "tqdm",
    "matplotlib",
    "seaborn",
    "huggingface_hub",
]

[dependency-groups]
dev = [
    "ipython",
]
